--- a/config/corne.conf
+++ b/config/corne.conf
@@ -4,3 +4,7 @@
 
 # Uncomment the following line to enable the Corne OLED Display
 # CONFIG_ZMK_DISPLAY=y
+
+# ZMK STUDIO SETTINGS
+CONFIG_ZMK_STUDIO=y
+CONFIG_ZMK_STUDIO_LOCKING=n
