--- a/config/corne.conf
+++ b/config/corne.conf
@@ -6,5 +6,5 @@
 # CONFIG_ZMK_DISPLAY=y
 
 # ZMK STUDIO SETTINGS
-CONFIG_ZMK_STUDIO=y
-CONFIG_ZMK_STUDIO_LOCKING=n
+#CONFIG_ZMK_STUDIO=y
+#CONFIG_ZMK_STUDIO_LOCKING=n
